# SnubbyLand

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dijkstra.cpp  index.html  make.sh  s.html  test  test.sh
NEW_FILES/: get_level.hpp  view.hpp
NEW_FILES/ayoub/: INDEX.hpp  WIN_LOSE.hpp
files/: 1  11  2  3  car  car2  dd  ensias  level0  level1  level2  level3  test
includes/: HTTPRequest.hpp
levels/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  3  4  5  6  7  8  9  N_L  n  n_open
lib/: libSDL2-2.0.so.0  libSDL2-2.0.so.0.12.0  libboost_serialization.so.1.67.0
src/: -1  10  Automatic.hpp  Coin.hpp  CreateGame.cpp  Creating and Training a Neural Network in Python.ipynb  Events.hpp  Game.hpp  Graphic.hpp  HTTPRequest.hpp  INDEX.hpp  LEVEL_CREATOR.hpp  Level.cpp  Level.hpp  Main.cpp  OnlineWinLose.hpp  Render.hpp  SNUUUUUUUBBY.hpp  Server_level.hpp  Server_stream.hpp  Simulation.hpp  StartMenu.hpp  WIN_LOSE.hpp  class.hpp  cnn  cnn.cpp  cnn.hpp  constant.hpp  controller.hpp  creator.hpp  ff  fonction.hpp  game  game.cpp  game.hpp  get_level.hpp  global_variable.hpp  graphic.hpp  index.hpp  init.hpp  (+29 more)
src/.ipynb_checkpoints/: Creating and Training a Neural Network in Python-checkpoint.ipynb
src/ayoub/: INDEX.hpp  PAUSE.hpp  WIN_LOSE.hpp
src/class/: Big_spiral_dot.hpp  Coin.hpp  Linear_enemy.hpp  Player.hpp  Spiral_dot.hpp  Squar_enemy.hpp  brain.hpp  level.hpp
src/create/: Big_spiral_dot.hpp  Coin.hpp  Green_area.hpp  Linear_enemy.hpp  (+4 more)
svg/: help.py  index.py  level_slide.py  main.py
